<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/blackwood"
    tools:context="measurementconverter.spencerbrooks.com.measurementconverter.TempActivity">
    <TextView
        android:id="@+id/titleText"
        android:text="@string/temp_title"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextId"
        android:hint="Enter Temperature"
        android:textColor="#ffffffff"
        android:text="@string/editTextView"
        android:gravity="center_horizontal"
        android:textColorHint="#ffffffff"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="95dp"
        android:inputType="phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/celConvertedId"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:text="@string/celTextView"
        android:textColor="#ffffffff"
        android:layout_below="@+id/editTextId"
        android:layout_marginTop="15dp"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fahConvertId"
        android:text="@string/fahTextView"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_below="@+id/celConvertedId"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convertButtonId"
        android:text="@string/convertButton"
        android:background="@drawable/custom_buttons"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fahConvertId"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_below="@+id/titleText"
        android:background="@drawable/bestthermometer"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>



    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
        android:entries="@array/degree_array"
        android:textColor="#ffffffff"
        android:id="@+id/spinner"
        android:layout_alignBottom="@+id/editTextId"
        android:layout_toRightOf="@+id/editTextId"
        />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/downtothegroundtwo"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:layout_alignLeft="@+id/spinner"
        android:layout_marginLeft="60dp"/>
    <!--<ImageView-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="@drawable/dropdown"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginTop="88dp"-->
        <!--android:layout_marginRight="5dp"/>-->


</RelativeLayout>
